--- a/main.css
+++ b/main.css
@@ -108,9 +108,9 @@ textarea::placeholder {
   color: white; /* Set font color to white */
 }
 
-/* #MainMenu {visibility: hidden;}
+#MainMenu {visibility: hidden;}
 footer {visibility: hidden;}
-header {visibility: hidden;} */
+header {visibility: hidden;}
 
 .reportview-container .main .block-container{
         max-width: {percentage_width_main}%;
