--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+[data-testid="stSidebar"][aria-expanded="true"]{
+  min-width: 17vw;
+  max-width: 17vw;
+}
+
 .button, .button:link, .button:visited {
   font-size: 20px;
   background-color: #00D0A3;
@@ -14,65 +19,38 @@
 }
 
 
-/* table.dataframe {
+
+table {
   border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 0.7em;
+  margin: 5px auto;
+  font-size: 0.65em;
   font-family: sans-serif;
   min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  max-width: 100vh;
-}
-
-table.dataframe thead th {
-  background-color: #00D0A3;
-  color: #FFFFFF;
   text-align: center;
 }
 
-table.dataframe tbody tr:nth-of-type(even) {
+table thead th {
+  background-color: #00D0A3;
+  color: #FFFFFF;
+}
+
+table tbody tr:nth-of-type(even) {
   background-color: #f3f3f3;
 }
 
-table.dataframe tbody tr:last-of-type {
+table tbody tr:last-of-type {
   border-bottom: 2px solid #00D0A3;
 }
 
-table.dataframe tbody td {
-  padding: 12px 15px;
-} */
+table tbody td {
+  padding: 8px 10px;
+}
 
 .table-container {
   overflow-x: auto;
 }
 
-table.dataframe {
-  border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 0.7em;
-  font-family: sans-serif;
-  min-width: 100%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  max-width: 100%;
-}
-
-table.dataframe thead th {
-  background-color: #00D0A3;
-  color: #FFFFFF;
-  text-align: center;
-}
-
-table.dataframe tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
-}
-
-table.dataframe tbody tr:last-of-type {
-  border-bottom: 2px solid #00D0A3;
-}
-
-table.dataframe tbody td {
-  padding: 8px 10px;
-}
 
 
 @-webkit-keyframes bounce {
@@ -134,6 +112,7 @@ body {
 
 h1, h2 {
   color: #333;
+  text-align: center;
 }
 
 h1 {
@@ -169,8 +148,33 @@ p, ul, li{
   cursor: pointer; /* Change cursor to hand on hover */
 }
 
-.metric-chart {
-  align-content: center;
-  font-size: 20px;
+[data-testid="metric-container"] {
+  width: fit-content;
+  margin: auto;
+  overflow: visible;
+}
 
+[data-testid="metric-container"] > div {
+  width: fit-content;
+  margin: auto;
+  overflow: visible;
+}
+
+[data-testid="metric-container"] label {
+  width: fit-content;
+  margin: 5px auto;
+  overflow: visible;
+}
+
+div[data-testid="metric-container"] {
+  color: black;
+  overflow-wrap: break-word;
+  overflow: visible;
+}
+
+div[data-testid="metric-container"] > label[data-testid="stMetricLabel"] > div {
+  overflow-wrap: break-word;
+  white-space: break-spaces;
+  color: black;
+  overflow: visible;
 }
